--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-token: "7ER5RKHzqzBvWaRi"    # Lichess OAuth2 Token.
+token: "lip_1tElJN8w3YabQgbwGKNO"    # Lichess OAuth2 Token.
 url: "https://lichess.org/"  # Lichess base URL.
 
 engine:                      # Engine settings.
